try to fix overflow-2

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 body {
   background-color: var(--bg-color);
   font-family: Inter, sans-serif;
-  overflow-x: hidden;
+  overflow-x: unset;
 }
 .App {
   position: relative;
